Agrega validación personalizada

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./img/bookmark.svg">
             <h2>Nuevo libro</h2>
         </div>
-        <form method="dialog">
+        <form method="dialog" novalidate>
             <fieldset>
                 <label for="book-title">Titulo</label>
                 <input type="text" id="book-title" name="book-title" required>
